@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-12-18T00:47:12Z",
-  "count_outdated" : 1513,
-  "uniques_outdated" : 825,
-  "count" : 1527,
-  "uniques" : 833,
+  "timestamp" : "2023-12-18T08:13:24Z",
+  "count_outdated" : 1514,
+  "uniques_outdated" : 826,
+  "count" : 1528,
+  "uniques" : 834,
   "clones" : [
-    {
-      "timestamp": "2023-12-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-12-11T00:00:00Z",
       "count": 1,
@@ -73,6 +64,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-12-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
