@@ -1,12 +1,7 @@
 {
   "count": 14,
-  "uniques": 2,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2023-12-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-12-11T00:00:00Z",
       "count": 1,
@@ -40,6 +35,11 @@
     {
       "timestamp": "2023-12-17T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-12-18T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
