@@ -1,3 +1,12 @@
+2023-12-18T08:13:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7245316416 # 2184
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-18
+* notice: last 14d: unq all: 1 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 825 1513 / 833 1527
+* notice: next accum: outdated-unq outdated-all / unq all: 826 1514 / 834 1528
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-12-04] / [2023-12-18]
+
 2023-12-18T00:47:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7242135863 # 2183
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-18
